<resources>
    <string name="app_name">RU Cafe</string>
    <string name="main_menu">Main Menu</string>
    <string name="rutgers_cafe">Rutgers Cafe</string>
    <string name="basket_icon">Basket</string>
    <string name="orders_icon">Order History</string>
    <string name="coffee_icon">Order Coffee</string>
    <string name="donuts_icon">Order Donuts</string>
    <string name="toast_button">CLICK ME!!!!</string>
    <string name="subtotal">Subtotal</string>
    <string name="add_to_order">ADD TO ORDER</string>
    <string name="basket">Basket</string>
    <string name="store_orders">Order History</string>
    <string name="order_numbers">Order No.</string>

    <string-array name="donut_types">
        <item>Cake</item>
        <item>Yeast</item>
        <item>Hole</item>
    </string-array>

    <string-array name="cake_flavors">
        <item>Blueberry</item>
        <item>Coffee</item>
        <item>Old Fashioned</item>
    </string-array>

    <string-array name="hole_flavors">
        <item>Chocolate Glaze</item>
        <item>Glazed</item>
        <item>Jelly</item>
        <item>Cinnamon</item>
    </string-array>

    <string-array name="yeast_flavors">
        <item>Chocolate Frosted</item>
        <item>Strawberry Frosted</item>
        <item>Vanilla Frosted</item>
        <item>Boston Cream</item>
        <item>Powdered</item>
        <item>Double Chocolate</item>
    </string-array>

    <string-array name="coffee_sizes">
        <item>Short</item>
        <item>Tall</item>
        <item>Grande</item>
        <item>Venti</item>
    </string-array>

    <string-array name="quantities">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string name="quantity_label">Quantity:</string>
    <string name="coffee_size_label">Size:</string>
    <string name="sweet_cream">Sweet Cream</string>
    <string name="french_vanilla">French Vanilla</string>
    <string name="irish_cream">Irish Cream</string>
    <string name="caramel">Caramel</string>
    <string name="mocha">Mocha</string>

    <string name="remove_item">Remove</string>
    <string name="default_qty">0</string>
    <string name="add_to_basket">Add to Basket</string>
    <string name="place_order">Place Order</string>
    <string name="total_Price">Total:</string>
    <string name="sales_tax">Sales Tax:</string>
    <string name="sub_total">Sub Total:</string>
    <string name="default_price">0.00</string>
    <string name="dollar_sign">$</string>
    <string name="add_button">+</string>
    <string name="remove_button">-</string>
    <string name="order_history_remove">REMOVE ORDER</string>
    <string name="coffee_default_subtotal">0.00</string>

</resources>